Updated Resume With QR.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
         <!-- Projects Section -->
-        <a id="resumeDownload" href="./files/Foxx-Resume.pdf" target="_blank" download>Danielle's Resume</a>
+        <a id="resumeDownload" href="./files/FoxxD-Resume.pdf" target="_blank" download>Danielle's Resume</a>
         <section class="projectsContainer">
             <div class="project">
                 <h3 class="projectTitle">Project #1</h3>
